header initial commit

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,21 @@
-<div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-</div>
+<nav class="navbar">
+    <a class="navbar-brand" href="#">
+        <img src="/assets/pics/logo.jpeg" alt="">
+    </a>
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+        <a class="nav-link active" href="#">About</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Menu</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Location</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+        </li>
+    </ul>
+</nav>
+
+
