--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,23 +1,29 @@
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+.navbar
+{
+    background-color: transparent;
+    font-family: 'Montserrat', sans-serif;
+    padding: 20px 40px;
+    box-sizing: border-box;
+    border-color: #ffffff;
 }
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.nav a
+{
+    display: block;
+    padding: 12px 20px;
+    border: 1px solid transparent;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #000000;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.nav a:hover {
+    border-bottom: 3px solid black;
 }
-
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  
+.nav a.active {
+    border-bottom: 3px solid black;
 }
