--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,50 @@
-<p>footer works!</p>
+  <!-- Site footer -->
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h6>About</h6>
+          <p class="text-justify">Illuzion is a contemporary Japanese restaurant in Hoboken, New Jersey known for the guarantee that only fresh fish meat are used in our dishes. Illuzion lives up to that promise by shipping fresh fish from Tokyo Tsukiji Market every day and never keep them overnight. Although this adds additional cost to Illuzion's daily operation, over the time it has helpped won the hearts of many sushi and sashimi goers. For the same cost at other Japanese restaurants, Illuzion customers are guaranteed to have the freshest food they can find.</p>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Quick Access</h6>
+          <ul class="footer-links">
+            <li><a>About</a></li>
+            <li><a>Menu</a></li>
+            <li><a>Location</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Quick Links</h6>
+          <ul class="footer-links">
+            <li><a href="http://scanfcode.com/about/">About Us</a></li>
+            <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
+            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
+            <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
+            <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by Illuzion
+          </p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+          </ul>
+        </div>
+      </div>
+    </div>
+</footer>
