--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
         <a class="nav-link active" href="#">About</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Menu</a>
+        <a class="nav-link" (click)="onClickMenu()">Menu</a>
         </li>
         <li class="nav-item">
         <a class="nav-link" href="#">Location</a>
