--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,5 @@
 <nav class="navbar">
-    <a class="navbar-brand" href="#">
-        <img src="/assets/pics/logo.jpeg" alt="">
-    </a>
+    <a class="navbar-brand" href="#">Illuzion</a>
     <ul class="nav justify-content-end">
         <li class="nav-item">
         <a class="nav-link active" href="#">About</a>
