--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,25 @@
-<nav class="navbar">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="#">Illuzion</a>
-    <ul class="nav justify-content-end">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+      <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link active" href="#">About</a>
+            <a class="nav-link active" href="#">About</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" (click)="onClickMenu()">Menu</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Location</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
         </li>
-        <li class="nav-item">
-        <a class="nav-link" (click)="onClickMenu()">Menu</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">Location</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-        </li>
-    </ul>
+      </ul>
+    </div>
 </nav>
 
 
