--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="section-wrap">
+</div>
+
+<p>    Home works! </p>
+<p>    Home works! </p>
+<p>    Home works! </p>
+<p>    Home works! </p>
+<p>    Home works! </p>
+<p>    Home works! </p>
