--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,33 @@
+<section id="header-background">
+    <div class="header-section section-wrap">
+        <div class="section-wrap-template">
+            <h1>Home works!</h1>   
+            <p> random text <br> random text</p>
+            <button type="button" class="btn btn-outline-light">Light</button>
+        </div>
+    </div>
+</section>
+
 <div class="section-wrap">
+    <div class="section-wrap-template">
+        <h1>Home works!</h1>   
+        <p> random text <br> random text</p>
+        <button type="button" class="btn btn-outline-light">Light</button>
+    </div>
 </div>
 
-<p>    Home works! </p>
-<p>    Home works! </p>
-<p>    Home works! </p>
-<p>    Home works! </p>
-<p>    Home works! </p>
-<p>    Home works! </p>
+<div class="section-wrap">
+    <div class="section-wrap-template">
+        <h1>Home works!</h1>   
+        <p> random text <br> random text</p>
+        <button type="button" class="btn btn-outline-light">Light</button>
+    </div>
+</div>
+
+<div class="section-wrap">
+    <div class="section-wrap-template">
+        <h1>Home works!</h1>   
+        <p> random text <br> random text</p>
+        <button type="button" class="btn btn-outline-light">Light</button>
+    </div>
+</div>
