--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,4 @@
-
- .section-wrap {
+.header-wrap {
     background-image: url(/assets/pics/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
