--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,12 @@
 
  #header-background {
-    background-image: url(/assets/pics/background.jpg);
+    background-image: linear-gradient(
+                        rgba(20,20,20, .5), 
+                        rgba(20,20,20, .5)), 
+                        url(/assets/pics/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-}
-.section-wrap{
+    background-position: center;
     padding: 20% 2%;
 }
 
@@ -12,4 +14,14 @@
     padding: 3rem 1.5rem;
     text-align: center;
     color: white;
+}
+
+.header-section .section-wrap-template h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 1;
+    letter-spacing: 0.05em;
+    padding-bottom: 10px;
+    text-transform: uppercase;
 }
