--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,2 +1,33 @@
-<div class="header-wrap"></div>
-<p>menu works!</p>
+<section id="header-background">
+    <div class="header-section section-wrap">
+        <div class="section-wrap-template">
+            <h1>Menu works!</h1>   
+            <p> random text <br> random text</p>
+            <button type="button" class="btn btn-outline-light">Light</button>
+        </div>
+    </div>
+</section>
+
+<div class="section-wrap">
+    <div class="section-wrap-template">
+        <h1>Home works!</h1>   
+        <p> random text <br> random text</p>
+        <button type="button" class="btn btn-outline-light">Light</button>
+    </div>
+</div>
+
+<div class="section-wrap">
+    <div class="section-wrap-template">
+        <h1>Home works!</h1>   
+        <p> random text <br> random text</p>
+        <button type="button" class="btn btn-outline-light">Light</button>
+    </div>
+</div>
+
+<div class="section-wrap">
+    <div class="section-wrap-template">
+        <h1>Home works!</h1>   
+        <p> random text <br> random text</p>
+        <button type="button" class="btn btn-outline-light">Light</button>
+    </div>
+</div>
