--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,4 +31,29 @@
             <button type="button" class="btn btn-outline-light">Light</button>
         </div>
     </div>
+
+    <div class="section-wrap">
+        <div class="section-wrap-template">
+            <h1>Home works!</h1>   
+            <p> random text <br> random text</p>
+            <button type="button" class="btn btn-outline-light">Light</button>
+        </div>
+    </div>
+
+    <div class="section-wrap">
+        <div class="section-wrap-template">
+            <h1>Home works!</h1>   
+            <p> random text <br> random text</p>
+            <button type="button" class="btn btn-outline-light">Light</button>
+        </div>
+    </div>
+
+    <div class="section-wrap">
+        <div class="section-wrap-template">
+            <h1>Home works!</h1>   
+            <p> random text <br> random text</p>
+            <button type="button" class="btn btn-outline-light">Light</button>
+        </div>
+    </div>
+
 </section>
