--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,18 +5,23 @@
         </div>
     </div>
 </section>
-
-<div class="container">
-    <div *ngFor="let category of categories">
-        <h1> {{category?.name}} </h1>
-        <p> {{category?.description}} </p>
-        <div *ngFor="let product of category?.products">
-            <h3>
-                <span> {{product?.name}} </span>
-                <span class='dots'></span>
-                <span> ${{product?.price}} </span>
-            </h3>
-            <p> {{product?.description}} </p>
+<div class="menu-categories">
+    <button *ngFor="let category of categories" type="button" class="btn btn-black" (click)="onClickCategory(category)">{{ category.name }}</button>
+</div>
+<div>
+    <div class="container">
+        <div>
+            <h1> {{selected?.name}} </h1>
+            <p> {{selected?.description}} </p>
+            <div *ngFor="let product of selected?.products">
+                <h3>
+                    <span> {{product?.name}} </span>
+                    <span class='dots'></span>
+                    <span> ${{product?.price}} </span>
+                </h3>
+                <p> {{product?.description}} </p>
+            </div>
         </div>
     </div>
 </div>
+
