--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbar-hamburger">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" (click)="onClickMenu()">Menu</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Location</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/" href="/">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/menu" href="/menu">Menu</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/location" href="/location">Location</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/contact" href="/contact">Contact</a>
         </li>
       </ul>
     </div>
