--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,12 +2,12 @@
     background-image: linear-gradient(
                         rgba(20,20,20, .5), 
                         rgba(20,20,20, .5)), 
-                        url(/assets/pics/background.jpg);
+                        url(/assets/pics/img13.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 20% 2%;
  }
-
+  
 .header-section .section-wrap-template {
     padding: 3rem 1.5rem;
     text-align: center;
@@ -22,4 +22,17 @@
     letter-spacing: 0.05em;
     padding-bottom: 10px;
     text-transform: uppercase;
+}
+
+.section-wrap {
+    padding: 3rem 1.5rem;
+}
+
+.section-wrap p {
+    font-family: 'Clarkson',Helvetica,sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: 0.03em;
+    padding-bottom: 10px;
 }
