--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,19 +10,33 @@
 <section id="about">
     <div class="section-wrap">
         <div class="row">
-            <div class="col-sm-5 align-self-center">
-                <img src="/assets/pics/img1.jpeg" class="img-thumbnail w-100">
-                <img src="/assets/pics/img2.jpeg" class="img-thumbnail w-100">
+            <div class="column col-md-6 align-self-center">
+                <img src="/assets/pics/img3.jpeg" class="img-thumbnail w-100">
             </div>
-            <div class="col-sm-7 ">
+            <div class="column col-md-6 align-self-center">
+                <h1>Our Story</h1>   
                 <p>
                 <strong>Illuzion</strong> is a contemporary Japanese restaurant in Hoboken, New Jersey known for the guarantee that only fresh fish meat are used in our dishes. Illuzion lives up to that promise by shipping fresh fish from Japanese Market every day and never keep them overnight. Although this adds additional cost to Illuzion's daily operation, over the time it has helpped won the hearts of many sushi and sashimi goers. For the same cost at other Japanese restaurants, Illuzion customers are guaranteed to have the freshest food they can find.
                 </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column col-md-6 order-md-12 align-self-center">
+                <img src="/assets/pics/img17.jpeg" class="img-thumbnail w-100">
+            </div>
+            <div class="column col-md-6 order-md-1 align-self-center">
                 <p>
-                Since its opening in Hoboken, New Jersey, Illuzion has served hundreds of thousands from tri-state area as well as customers from other states and countries. Besides the obvious freshness of the material that we use, our customers also rave about the large portion of the meal served as well as its delicate texture. Besides the wide range of sushi and sashimi selections, dishes from the kitchen are also considered magical and legendary that can truely bring out the meaning of "Illusion". We use extra virgin olive oil when it comes to kitchen cooking, and it is our promise that NO MSG will be used in any of our cooking.
+                    <strong>Since</strong> its opening in Hoboken, New Jersey, Illuzion has served hundreds of thousands from tri-state area as well as customers from other states and countries. Besides the obvious freshness of the material that we use, our customers also rave about the large portion of the meal served as well as its delicate texture. Besides the wide range of sushi and sashimi selections, dishes from the kitchen are also considered magical and legendary that can truely bring out the meaning of "Illusion". We use extra virgin olive oil when it comes to kitchen cooking, and it is our promise that NO MSG will be used in any of our cooking.
                 </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column col-md-6 align-self-center">
+                <img src="/assets/pics/img17.jpeg" class="img-thumbnail w-100">
+            </div>
+            <div class="column col-md-6 align-self-center">
                 <p>
-                At Illuzion, we welcome our customers B.Y.O.B.. Our waiters and waitresses serve our customers with care and respect, making you feel comfortable and relaxed. The interior design of the restaurant is done by contemporary artists that gives you the "Illuzion" of being in the East Village of New York City. Stop by and check us out at Illuzion.
+                    <strong>Welcome</strong> our customers B.Y.O.B.. Our waiters and waitresses serve our customers with care and respect, making you feel comfortable and relaxed. The interior design of the restaurant is done by contemporary artists that gives you the "Illuzion" of being in the East Village of New York City. Stop by and check us out at Illuzion.
                 </p>
             </div>
         </div>
@@ -30,52 +44,5 @@
 </section>
 
 <section id="gallery">
-    <div class="section-wrap">
-        <div class="section-wrap-template">
-            <h1>Home works!</h1>   
-            <p> random text <br> random text</p>
-            <button type="button" class="btn btn-outline-light">Light</button>
-        </div>
-    </div>
-    
-    <div class="section-wrap">
-        <div class="section-wrap-template">
-            <h1>Home works!</h1>   
-            <p> random text <br> random text</p>
-            <button type="button" class="btn btn-outline-light">Light</button>
-        </div>
-    </div>
-    
-    <div class="section-wrap">
-        <div class="section-wrap-template">
-            <h1>Home works!</h1>   
-            <p> random text <br> random text</p>
-            <button type="button" class="btn btn-outline-light">Light</button>
-        </div>
-    </div>
-
-    <div class="section-wrap">
-        <div class="section-wrap-template">
-            <h1>Home works!</h1>   
-            <p> random text <br> random text</p>
-            <button type="button" class="btn btn-outline-light">Light</button>
-        </div>
-    </div>
-
-    <div class="section-wrap">
-        <div class="section-wrap-template">
-            <h1>Home works!</h1>   
-            <p> random text <br> random text</p>
-            <button type="button" class="btn btn-outline-light">Light</button>
-        </div>
-    </div>
-
-    <div class="section-wrap">
-        <div class="section-wrap-template">
-            <h1>Home works!</h1>   
-            <p> random text <br> random text</p>
-            <button type="button" class="btn btn-outline-light">Light</button>
-        </div>
-    </div>
 
 </section>
