--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbar-hamburger">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/" href="/">About</a>
+            <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/menu" href="/menu">Menu</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="/menu">Menu</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/location" href="/location">Location</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="/location">Location</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/contact" href="/contact">Contact</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
         </li>
       </ul>
     </div>
