update menu button on home screen

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="header-section">
         <div class="section-wrap-template">
             <h1>Japanese Cuisine</h1>   
-            <button type="button" class="btn btn-outline-light">Browse Menu</button>
+            <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="/menu">Browse Menu</button>
         </div>
     </div>
 </section>
