--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+#header-background {
+    background-image: linear-gradient(
+                        rgba(20,20,20, .5), 
+                        rgba(20,20,20, .5)), 
+                        url(/assets/pics/img13.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 20% 2%;
+ }
+  
+.header-section .section-wrap-template {
+    padding: 3rem 1.5rem;
+    color: white;
+    text-align: center;
+}
+
+.section-wrap-template h1 {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 1;
+    letter-spacing: 0.05em;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+}
