--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -6,5 +6,7 @@
     </div>
 </section>
 <div class="location">
-    <div class="map" #map></div>
+    <div class="map-border">
+        <div class="map" #map></div>
+    </div>
 </div>
